--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
+        
+        <!-- SpringDoc OpenAPI UI -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
