--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} -
 
 # Cache configuration
 spring.cache.type=simple
+
+# Swagger UI configuration
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.url=/openapi.yaml
